<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ParlezVousAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_name">User Name</string>
    <string name="action_settings">Settings</string>
    <string name="edit_label_username">User name : </string>
    <string name="edit_label_password">Password : </string>
    <string name="button_label_clean">Vider</string>
    <string name="button_label_submit">Envoyer</string>
    <string name="title_activity_logged">Logged</string>
    <string name="well_connected">Well connected</string>
    <string name="title_activity_list_messages">ListMessagesActivity</string>
    <string name="header_messages">Messages</string>

</resources>
