<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.parlezvousandroid.MainActivity$PlaceholderFragment" >

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        />
    
    <TextView
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:background="#FF5BADF0"
        android:gravity="center"
        android:text="@string/hello_world" />

    <ScrollView
        android:id="@+id/Content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/Footer"
        android:layout_below="@+id/Header" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="vertical"
            >

            <TextView                 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_label_username"
                />
            
            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                
                />
            
            <TextView                 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_label_password"
                />
            
            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/Footer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#FF5BF09B"
        android:orientation="horizontal"
         >
        <Button
            android:id="@+id/button_clean"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_label_clean"
            />
         <Button
            android:id="@+id/button_submit"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_label_submit"       
            />
    </LinearLayout>

</RelativeLayout>